--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             padding: 0;
             background-repeat: no-repeat;
             background: #191919;
+			background-size: cover;
         }
     </style>
 </head>
